add Auth api
