# app/Http/Controllers/Api/Controllers/AuthController.php
@@ -1,0 +1,135 @@
+<?php
+
+namespace App\Http\Controllers\Api\Controllers;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\RegistrationRequest;
+use App\Models\User;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
+use \App\Http\Requests\LoginRequest;
+
+class AuthController extends Controller
+{
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/registration",
+     *     tags={"Auth"},
+     *     summary="Register a new user",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name","email","password"},
+     *             @OA\Property(property="name", type="string", example="Alisher"),
+     *             @OA\Property(property="email", type="string", format="email", example="alisher@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password"),
+     *             @OA\Property(property="password_confirmation", type="string", format="password", example="password")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful registration",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string", example="token")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Validation error",
+     *     )
+     * )
+     */
+    public function registration(RegistrationRequest $request)
+    {
+        // dd($request);
+
+        $user = User::create([
+            'name' => $request->name,
+            'email' => $request->email,
+            'password' => Hash::make($request->password),
+        ]);
+
+        $token = $user->createToken($request->password)->plainTextToken;
+
+        return [
+            'access_token' => $token,
+            'user' => ["name" => $user->name, "email" => $user->email],
+        ];
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/login",
+     *     tags={"Auth"},
+     *     summary="login a user",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"email","password"},
+     *             @OA\Property(property="email", type="string", format="email", example="alisher@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful registration",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string", example="token")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Validation error",
+     *     )
+     * )
+     */
+    public function login(LoginRequest $request)
+    {
+        $user = User::where('email', $request->email)->first();
+
+        if (!$user || !Hash::check($request->password, $user->password)) {
+            return response()->json(['message' => 'Invalid credentials'], 401);
+        }
+
+        $token = $user->createToken('auth_token')->plainTextToken;
+
+        return  [
+            'access_token' => $token,
+            'user' => ["name" => $user->name, "email" => $user->email],
+        ];
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/logout",
+     *     tags={"Auth"},
+     *     summary="logout a user",
+     *  @OA\Parameter(
+     *              name="Accept",
+     *              in="header",
+     *              required=true,
+     *              description="Accept header",
+     *              @OA\Schema(
+     *                  type="string",
+     *                  enum={"application/json"},
+     *                  default="application/json"
+     *              )
+     *          ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Invalid credentials",
+     *     )
+     * )
+     */
+    public function logout(Request $request)
+    {
+        $request->user()->tokens()->delete();
+
+        return response()->json(['message' => 'Logged out successfully']);
+    }
+}
